# marvin

./: .claudeignore  .env.example  .gitignore  .marvin-source  .mcp.json  AGENTS.md  CLAUDE.md  PRIVACY.md  SETUP.md  TESTING.md  pyproject.toml
.claude/: settings.json
.hooks/: pre-commit
2021Ram3500/: service-tracker.md
MobileRVTech/: README.md  research-aqua-hot-training.md  rv-tech-business-plan.md
content/: ai-orchestration-review.md  blindfold-mcp-compat.md  cc-dashboard-concept.md  dnd-project.md  electronic-signature-setup.md  g2i-exam-analysis.md  harden-audit-2026-04-08.md  harden-audit-skills-harden-2026-04-10.md  learning-journal.md  pmp-quiz-mobile-setup.md  recipe-app.md  research-golang-learning.md  research-superpowers-skill.md  resume-skill-redesign-plan.md  voice-input-options.md  yps-assistant-architecture.md
context/: agent-contract.md  agent-runs.example.json  commitments.example.json  instruction-ownership.md  marvin-operating-rules.md  project-context-template.md  user-profile.md
pmp/: study-checklist.md  veteran-funding-options.md
reports/: analytics-2026-02.md  analytics-2026-04.md
scripts/: check_instruction_drift.py  export-quiz.sh  marvin_start.py  validate_commitments.py
sessions/: 2026-01-26.md  2026-02-03.md  2026-02-06.md  2026-02-09.md  2026-02-10.md  2026-02-17.md  2026-02-22.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-02-26.md  2026-03-05.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-12.md  2026-03-13.md  2026-03-16.md  2026-03-19.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  (+8 more)
(+224 files in other folders)
