[project]
name = "marvin"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
